# stocks-web

./: .gitignore  README.md  provision-market-db.sql  sql-ref.sql
.github/workflows/: build-push.yml  ci.yml
agents/: BackendEngineer.md  DatabaseEngineer.md  DevopsEngineer.md  FrontendEngineer.md  RustWASMEngineer.md  SystemsArchitect.md
backend/: Dockerfile  README.md  go.mod
backend/cmd/server/: main.go
backend/internal/auth/: apikey.go  handler.go  middleware.go  password.go  ratelimit.go
backend/internal/config/: config.go
backend/internal/db/: db.go
backend/internal/handlers/: admin.go  api_v1.go  apikeys.go  dashboard.go  favorites.go  helpers.go  instruments.go  market.go  (+2 more)
backend/migrations/: 001_create_users.down.sql  001_create_users.up.sql  002_create_referral_codes.down.sql  002_create_referral_codes.up.sql  003_create_user_favorites.down.sql  003_create_user_favorites.up.sql  004_create_refresh_tokens.down.sql  004_create_refresh_tokens.up.sql  005_add_performance_indexes.down.sql  005_add_performance_indexes.up.sql  006_create_views.down.sql  006_create_views.up.sql  007_seed_referral_codes.down.sql  007_seed_referral_codes.up.sql  init.sql
deploy/kustomize/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
frontend/: Dockerfile  astro.config.mjs  docker-compose.yml  nginx.conf  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/src/: env.d.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
(+39 files in other folders)
