[package]
name = "stocks-wasm"
version = "0.1.0"
edition = "2021"
description = "Client-side WASM module for time-series downsampling (LTTB) and technical indicators (SMA, EMA, RSI, VWAP)"
authors = ["Josh Baney"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"       # optimize for small binary size
lto = true            # link-time optimization
strip = true          # strip debug symbols
codegen-units = 1     # single codegen unit for max optimization